Migrated Gradle to Kotlin DSL

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ loader_version=0.14.22
 fabric_kotlin_version=1.10.10+kotlin.1.9.10
 
 # Mod Properties
+mod_id=algrim-chat
 mod_version=0.0.3
 maven_group=mc.algrim
 archives_base_name=algrim-chat
