--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,19 @@ loom {
 
 }
 
+sourceSets {
+    test {
+        compileClasspath += client.compileClasspath
+        runtimeClasspath += client.runtimeClasspath
+        compileClasspath += client.output
+        runtimeClasspath += client.output
+    }
+}
+
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -48,6 +61,8 @@ dependencies {
     // These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
     // modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
+
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
 
 processResources {
