--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@ gradlew text eol=lf
 *.properties text eol=lf
 *.mcmeta text eol=lf
 *.md text eol=lf
-LICENSE.txt text eol=lf
+LICENSE text eol=lf
 
 # Git
 .gitattributes text eol=lf
