--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,9 @@ max_line_length = 120
 insert_final_newline = true
 indent_size = 4
 indent_style = space
+ij_any_blank_lines_after_class_header = 0
+ij_any_keep_blank_lines_before_right_brace = 0
+ij_any_blank_lines_around_method = 1
 
 [{*.har,*.json,*.png.mcmeta}]
 indent_size = 2
