--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ fabric_kotlin_version=1.10.10+kotlin.1.9.10
 
 # Mod Properties
 mod_id=algrim-chat
-mod_version=0.0.5
+mod_version=0.0.5+1.20.1
 maven_group=mc.algrim
 archives_base_name=algrim-chat
 
