--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,21 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
+org.gradle.warning.mode=all
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.2
-fabric_kotlin_version=1.10.16+kotlin.1.9.21
+minecraft_version=1.20.6
+yarn_mappings=1.20.6+build.1
+loader_version=0.15.10
+fabric_kotlin_version=1.10.19+kotlin.1.9.23
 
 # Mod Properties
 mod_id=algrim-chat
-mod_version=0.1.3+1.20.4
+mod_version=0.2.0+1.20.6
 maven_group=mc.algrim
 archives_base_name=algrim-chat
 
 # Dependencies
-fabric_version=0.91.2+1.20.4
-malilib_version=0.18.0
+fabric_version=0.97.8+1.20.6
+malilib_version=0.19.0
