--- a/gradle.properties
+++ b/gradle.properties
@@ -5,17 +5,18 @@ org.gradle.warning.mode=all
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.6
-yarn_mappings=1.20.6+build.1
-loader_version=0.15.10
-fabric_kotlin_version=1.10.19+kotlin.1.9.23
+minecraft_version=1.21
+yarn_mappings=1.21+build.9
+loader_version=0.15.11
+fabric_kotlin_version=1.11.0+kotlin.2.0.0
 
 # Mod Properties
 mod_id=algrim-chat
-mod_version=0.2.0+1.20.6
+mod_version=1.0.0+1.21.0
 maven_group=mc.algrim
 archives_base_name=algrim-chat
 
 # Dependencies
-fabric_version=0.97.8+1.20.6
+fabric_version=0.100.7+1.21
 malilib_version=0.19.0
+sr_malilib_tag=1.21-sakura.8
