--- a/gradle.properties
+++ b/gradle.properties
@@ -5,18 +5,18 @@ org.gradle.warning.mode=all
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
-yarn_mappings=1.21+build.9
-loader_version=0.15.11
+minecraft_version=1.21.8
+yarn_mappings=1.21.8+build.1
+loader_version=0.16.14
 fabric_kotlin_version=1.11.0+kotlin.2.0.0
 
 # Mod Properties
 mod_id=algrim-chat
-mod_version=1.1.0+1.21.0
+mod_version=1.2.0+1.21.8
 maven_group=mc.algrim
 archives_base_name=algrim-chat
 
 # Dependencies
-fabric_version=0.100.7+1.21
+fabric_version=0.130.0+1.21.8
 malilib_version=0.19.0
-sr_malilib_tag=1.21-sakura.8
+sr_malilib_tag=1.21.8-0.25.5-sakura.2
